<resources>
    <string name="app_name">NoteAku</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="key_feedback">key_feedback</string>
    <string name="key_auto_backup">key_auto_backup</string>
    <string name="key_backup">key_backup</string>
    <string name="key_list_font">key_list_font</string>
    <string name="key_default_color">key_default_color</string>
    <string name="key_sync_launch">key_sync_launch</string>
    <string name="key_online_backup">key_online_backup</string>
    <string name="choose_email_client">Choose email client</string>

    <string-array name="font_size">
        <item>Tiny</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
    </string-array>

    <string-array name="font_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
